--- a/02-css-flexbox/flex-what.html
+++ b/02-css-flexbox/flex-what.html
@@ -9,22 +9,43 @@
 </head>
 
 <body>
-  <ul> <!--Parent element -->
-    <li>1st Child</li> <!--Child element -->
-    <li>2nd Child</li> <!--Child element -->
-    <li>3rd Child</li> <!--Child element -->
-    <li>4th Child</li> <!--Child element -->
-    <li>5th Child</li> <!--Child element -->
-  </ul>
+  <!-- <ul>
+    <li>1st Child</li>
+    <li>2nd Child</li>
+    <li>3rd Child</li>
+    <li>4th Child</li>
+    <li>5th Child</li>
+  </ul> -->
 
   <!-- Comment in for inline flex to be visualized -->
-  <ul> <!--Parent element -->
-    <li>1st Child</li> <!--Child element -->
-    <li>2nd Child</li> <!--Child element -->
-    <li>3rd Child</li> <!--Child element -->
-    <li>4th Child</li> <!--Child element -->
-    <li>5th Child</li> <!--Child element -->
-  </ul>
+  <!-- <ul>
+    <li>1st Child</li>
+    <li>2nd Child</li>
+    <li>3rd Child</li>
+    <li>4th Child</li>
+    <li>5th Child</li>
+  </ul> -->
+
+  <section class="child-1">
+    <div class="content">
+      <h2>Section 1</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis illo cupiditate fugiat blanditiis voluptas dicta delectus pariatur recusandae ipsum minima perferendis, modi libero corporis quidem culpa, molestias fugit cum est?</p>
+    </div>
+  </section>
+
+  <section class="child-2">
+    <div class="content">
+      <h2>Section 2</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis illo cupiditate fugiat blanditiis voluptas dicta delectus pariatur recusandae ipsum minima perferendis, modi libero corporis quidem culpa, molestias fugit cum est?</p>
+    </div>
+  </section>
+
+  <section class="child-3">
+    <div class="content">
+      <h2>Section 3</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis illo cupiditate fugiat blanditiis voluptas dicta delectus pariatur recusandae ipsum minima perferendis, modi libero corporis quidem culpa, molestias fugit cum est?</p>
+    </div>
+  </section>
 </body>
 
 </html>
