--- a/05-challange-1/index.html
+++ b/05-challange-1/index.html
@@ -15,12 +15,14 @@
   <script src="https://kit.fontawesome.com/fbadad80a0.js" crossorigin="anonymous"></script>
 
   <!-- Main CSS -->
+  <link rel="stylesheet" href="box.style.css">
   <link rel="stylesheet" href="styles.css">
   <title>Scarlet Portfolio</title>
 </head>
 
 <body>
-HELLO
+  <div class="div-1"></div>
+  <div class="div-2"></div>
 </body>
 
 </html>
