--- a/05-challange-1/box-sizing.html
+++ b/05-challange-1/box-sizing.html
@@ -15,27 +15,14 @@
   <script src="https://kit.fontawesome.com/fbadad80a0.js" crossorigin="anonymous"></script>
 
   <!-- Main CSS -->
+  <link rel="stylesheet" href="box.style.css">
   <link rel="stylesheet" href="styles.css">
   <title>Scarlet Portfolio</title>
 </head>
 
 <body>
-  <!-- Aside nav -->
-  <aside id="side-nav">
-    <div class="side-nav__content">
-      <div class="side-nav__content--logo">
-        <img src="img/logo-01.jpg" alt="logo">
-      </div>
-      <ul class="side-nav__content--social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-dribbble"></i></a>
-        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-      </ul>
-    </div>
-  </aside>
+  <div class="div-1"></div>
+  <div class="div-2"></div>
 </body>
 
 </html>
